# ghc-wasm-example

./: README.md  justfile
frontend/: README.md
frontend/public/: haskell.wasm  main.wasm
frontend/src/: index.css  index.tsx
frontend/src/worker/: worker.ts  workerApi.ts
haskell/: build.sh  cabal.project.freeze.first  cabal.project.freeze.wasi  cabal.project.local  ghc-wasm-example.cabal  haskell-wasm-test.cabal  hie.yaml
haskell/cbits/: init.c
haskell/src/: ForeignUtils.hs  Main.hs  StringWithLen.hs
haskell/src/Actions/: Parse.hs
haskell/src/Parse/: Expr.hs  Keyword.hs  Parser.hs
haskell/src/Syntax/: Expr.hs  Program.hs
