cabal-version: 3.0

-- adapted from fourmolu
-- https://github.com/fourmolu/fourmolu/blob/8aa2200fb38345d624d9682a051682094017bf8e/web/fourmolu-wasm/fourmolu-wasm.cabal

name: ghc-wasm-example
version: 0

common common
  default-language: GHC2021
  hs-source-dirs: src
  other-modules:
    ForeignUtils,
    StringWithLen,
    Actions.Parse,
    Syntax.Expr,
    Syntax.Program,
    Parse.Expr,
    Parse.Keyword,
    Parse.Parser
  default-extensions:
    OverloadedStrings,
    DerivingStrategies,
    DeriveAnyClass
  build-depends:
    base,
    bytestring,
    text,
    aeson,
    megaparsec

-- haskell-language-server has trobule with the
-- c-sources, so we include this stanza for development
library default
  import: common
  main-is: Main.hs
  ghc-options:
    -Wall
    -Wunused-packages

-- used when building the wasm file
executable ghc-wasm-example
  import: common
  main-is: Main.hs
  c-sources: cbits/init.c
  ghc-options:
    -Wall
    -Wunused-packages
    -no-hs-main
    -optl-mexec-model=reactor
    "-optl-Wl\
    -- memory management
    \,--export=malloc\
    \,--export=free\
    -- StringWithLen datatype
    \,--export=getString\
    \,--export=getStringLen\
    \,--export=freeStringWithLen\
    -- main functionality
    \,--export=runFibonacci\
    \,--export=runToUpper\
    \,--export=runParse\
    \"